...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/alert_img"
        android:layout_margin="10dp"
        android:src="@drawable/ic_warning"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/alert_msg"/>
    <TextView
        android:id="@+id/alert_msg"
        android:text="dummy text please "
        android:textSize="15dp"
        android:padding="8dp"
        android:textColor="@android:color/holo_red_dark"
...
