...
                        android:layout_height="wrap_content"
                        app:layout_constraintGuide_percent=".1"
                        android:orientation="horizontal"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/et_search"
                    android:focusedByDefault="false"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:focusableInTouchMode="true"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
...
                    android:drawableLeft="@drawable/ic_location_on"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:padding="@dimen/dimen_12dp"
                    android:textSize="@dimen/dimen_12dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_search_loc"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/enter_location"/>

                <ImageView
                    android:id="@+id/iv_search_loc"
                    android:layout_marginEnd="@dimen/dimen_12dp"
...
